updated openapi docs, reviewed user model and created quiz and question model
